@@ -1,6 +1,5 @@
 package software.xdev.saveactions.processors;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static software.xdev.saveactions.model.ActionType.build;
 
@@ -16,7 +15,7 @@ class BuildProcessorTest
 	@Test
 	void should_processor_have_no_duplicate_action()
 	{
-		final List<Action> actions = BuildProcessor.stream().map(Processor::getAction).collect(toList());
+		final List<Action> actions = BuildProcessor.stream().map(Processor::getAction).toList();
 		assertThat(actions).doesNotHaveDuplicates();
 	}
 	
@@ -26,7 +25,7 @@ class BuildProcessorTest
 		BuildProcessor.stream()
 			.forEach(processor -> assertThat(processor.getAction().getType()).isEqualTo(build));
 		BuildProcessor.stream()
-			.forEach(processor -> assertThat(((BuildProcessor)processor).getCommand()).isNotNull());
+			.forEach(processor -> assertThat(processor.getCommand()).isNotNull());
 	}
 	
 	@Test
